# 2030_5-Client

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
config/: gateway.yaml
core/: Makefile  http.c  se_connection.c
docs/: README.md  architecture.md  configuration.md  development.md  gateway.md  lifecycle.md  operations.md  sequence.md
docs/architecture/: 01_system_overview.mermaid  05_gateway_classes.mermaid  p0_component_map.mermaid  p0_data_model.mermaid  p0_resource_traversal.mermaid
docs/process/: p0_2030_5_resource_traversal.mermaid
docs/sequence/: 01_startup_sequence.mermaid  02_resource_traversal.mermaid  03_event_start_end.mermaid  05_teardown_sequence.mermaid  06_failure_modes.mermaid  08_exi_encoding.mermaid  09_polling_cycle.mermaid  p0_failure_modes.mermaid  p0_teardown_sequence.mermaid  p1_event_default_control.mermaid  p1_event_start_end.mermaid  p2_tls_packet_exchange.mermaid
docs/ui/: field_device.mermaid  gateway.mermaid
epri_client/: .gitignore  der_client.c  parse.c  readme.md  se_schema.c  targets.sh  xml_parse.c
epri_client/settings/: DERAvailability.xml  DERCapability.xml  DERSettings.xml  DERStatus.xml
gateway/: __init__.py  __main__.py  bridge.py  client.py  config.py  device.py  log.py  settings.py  telemetry.py
gateway/protocols/: __init__.py  dnp3.py  modbus.py
scripts/: gen_dev_certs.py
tests/: conftest.py  test_bridge.py  test_client.py  test_config.py  test_device.py  test_settings.py
tests/protocols/: test_modbus.py
